Stop squishing all the text fields

--- a/site/public/css/server.css
+++ b/site/public/css/server.css
@@ -73,7 +73,6 @@ input[type="url"],
 input[type="search"],
 input[type="tel"],
 input[type="color"] {
-    height: 20px;
     padding: 4px 6px;
     font-size: 14px;
     line-height: 20px;
